// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden: Render v1 conformance cases → AI SDK prompt render-user-image-input 1`] = `
{
  "ok": true,
  "prompt": [
    {
      "content": "You are a helpful agent.",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "What does this page show?",
          "type": "text",
        },
        {
          "data": {
            "data": {
              "data": [
                137,
                80,
                78,
                71,
                13,
                10,
                26,
                10,
                102,
                105,
                120,
                116,
                117,
                114,
                101,
                58,
                32,
                108,
                111,
                103,
                105,
                110,
                32,
                112,
                97,
                103,
                101,
                32,
                115,
                99,
                114,
                101,
                101,
                110,
                115,
                104,
                111,
                116,
              ],
              "type": "Buffer",
            },
            "type": "data",
          },
          "mediaType": "image/png",
          "type": "file",
        },
      ],
      "role": "user",
    },
  ],
  "tools": [
    {
      "description": "Read a file from the sandbox workspace.",
      "inputSchema": {
        "additionalProperties": false,
        "properties": {
          "path": {
            "type": "string",
          },
        },
        "required": [
          "path",
        ],
        "type": "object",
      },
      "name": "read_file",
      "type": "function",
    },
  ],
}
`;

exports[`golden: Render v1 conformance cases → AI SDK prompt render-screenshot-tool-result 1`] = `
{
  "ok": true,
  "prompt": [
    {
      "content": "You are a helpful agent.",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Take a screenshot of the login page.",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "input": {},
          "toolCallId": "call_1",
          "toolName": "screenshot",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "content",
            "value": [
              {
                "text": "Login page loaded.",
                "type": "text",
              },
              {
                "data": {
                  "data": {
                    "data": [
                      137,
                      80,
                      78,
                      71,
                      13,
                      10,
                      26,
                      10,
                      102,
                      105,
                      120,
                      116,
                      117,
                      114,
                      101,
                      58,
                      32,
                      108,
                      111,
                      103,
                      105,
                      110,
                      32,
                      112,
                      97,
                      103,
                      101,
                      32,
                      115,
                      99,
                      114,
                      101,
                      101,
                      110,
                      115,
                      104,
                      111,
                      116,
                    ],
                    "type": "Buffer",
                  },
                  "type": "data",
                },
                "mediaType": "image/png",
                "type": "file",
              },
              {
                "text": "Cursor at (640, 400).",
                "type": "text",
              },
            ],
          },
          "toolCallId": "call_1",
          "toolName": "screenshot",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "tools": [
    {
      "description": "Capture the sandbox desktop.",
      "inputSchema": {
        "additionalProperties": false,
        "properties": {},
        "required": [],
        "type": "object",
      },
      "name": "screenshot",
      "type": "function",
    },
  ],
}
`;

exports[`golden: Render v1 conformance cases → AI SDK prompt render-deferred-tool-loaded 1`] = `
{
  "ok": true,
  "prompt": [
    {
      "content": "You are a helpful agent.",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "File a bug about the login page.",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "input": {
            "query": "mcp__jira__create_issue",
          },
          "toolCallId": "call_1",
          "toolName": "tool_search",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "mcp__jira__create_issue: Create a Jira issue in a project.",
          },
          "toolCallId": "call_1",
          "toolName": "tool_search",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "tools": [
    {
      "description": 
"Load deferred tools so you can call them. Pass exact tool names, separated by commas, to load those tools; otherwise the query's words are matched against each deferred tool's name and description, and the best matches are loaded. A loaded tool stays available for the rest of the conversation.

Deferred tools (search to load): mcp__jira__create_issue"
,
      "inputSchema": {
        "additionalProperties": false,
        "properties": {
          "limit": {
            "default": 5,
            "description": "How many keyword matches to load.",
            "maximum": 10,
            "minimum": 1,
            "type": "integer",
          },
          "query": {
            "description": "Exact tool names separated by commas, or keywords. At most 200 characters.",
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "name": "tool_search",
      "type": "function",
    },
    {
      "description": "Read a file from the sandbox workspace.",
      "inputSchema": {
        "additionalProperties": false,
        "properties": {
          "path": {
            "type": "string",
          },
        },
        "required": [
          "path",
        ],
        "type": "object",
      },
      "name": "read_file",
      "type": "function",
    },
    {
      "description": 
"Create a Jira issue in a project.
Returns the new issue key."
,
      "inputSchema": {
        "additionalProperties": false,
        "properties": {
          "project": {
            "type": "string",
          },
          "summary": {
            "type": "string",
          },
        },
        "required": [
          "project",
          "summary",
        ],
        "type": "object",
      },
      "name": "mcp__jira__create_issue",
      "type": "function",
    },
  ],
}
`;

exports[`golden: Render v1 conformance cases → AI SDK prompt render-thinking-block-replay 1`] = `
{
  "code": "continuation_unsupported",
  "message": "a scripted thinking part can't be sent to acme_chat",
  "ok": false,
}
`;
